--- a/Home.html
+++ b/Home.html
@@ -33,7 +33,7 @@
 <img src="./assets/e3.jpg" >
 <img src="./assets/e4.jpg" >
 <br>
-<a  href="">  view more Electroinc itmes   </a>
+<a  href="./sub_subpages/ele_subpage.html">  view more Electroinc itmes   </a>
 
 <h2> Sport itmes</h2>
 
